# django-lazycommons

./: .gitignore  LICENSE.md  pyproject.toml
.github/workflows/: github-actions.yml
src/lazycommons/: admin.py  auth.py  helpers.py  models.py
