[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-lazycommons"
version = "1.0.2"
authors = [
  { name="Giuseppe Corti", email="giuseppe.corti@pm.me" },
]
description = "Reusable snippets for Django apps"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0"
]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/r3vn/django-lazycommons"
Issues = "https://github.com/r3vn/django-lazycommons/issues"
